run-ui-tests to execute ng from node_modules/.bin

--- a/nimbus-ui/pom.xml
+++ b/nimbus-ui/pom.xml
@@ -126,7 +126,7 @@
                             </execution>
                         </executions>
                           <configuration>
-                            <executable>ng</executable>
+                            <executable>${project.basedir}/nimbusui/node_modules/.bin/ng</executable>
                             <workingDirectory>${project.basedir}/nimbusui</workingDirectory>
                             <arguments>
                                 <argument>test </argument>
