--- a/nimbus-ui/pom.xml
+++ b/nimbus-ui/pom.xml
@@ -106,7 +106,30 @@
 			</activation>
 			<build>
 				<plugins>
-
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>${exec-maven-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                    <goals>
+                                        <goal>exec</goal>
+                                    </goals>
+                            </execution>
+                        </executions>
+                          <configuration>
+                            <executable>${project.basedir}/nimbusui/node_modules/.bin/ng</executable>
+                            <workingDirectory>${project.basedir}/nimbusui</workingDirectory>
+                            <arguments>
+                                <argument>test </argument>
+                                <argument>--watch=false </argument>
+                                <argument>--code-coverage</argument>
+                                <argument>--browsers</argument>
+                                <argument>${testconfig.ui.browsers}</argument>
+                            </arguments>
+                          </configuration>
+                    </plugin>
 				</plugins>
 			</build>
 		</profile>
