--- a/nimbus-test/src/test/resources/application-test.yml
+++ b/nimbus-test/src/test/resources/application-test.yml
@@ -42,6 +42,9 @@ stomp:
 
 domain:
   model:
+    domainSet:
+      remote: 
+        remote_repo,sample_remote
     basePackages:
       - com.antheminc.oss.nimbus.entity
       - com.antheminc.oss.nimbus.**.core
@@ -128,7 +131,15 @@ ext:
   repository:
     targetUrl: 
       ext_client: http://localhost:9095
-      
+
+remote:
+  repository:
+    serviceUrl:
+      remote_repo: http://remote-repo
+      remote_repo_withcontext: http://remote-repo/contextpath
+      cliententity: http://cliententity
+      client: http://client
+
 test:
   url:
     code: test-environment
