--- a/nimbus-test/pom.xml
+++ b/nimbus-test/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.antheminc.oss</groupId>
 		<artifactId>nimbus-parent</artifactId>
-		<version>1.1.10</version>
+		<version>1.1.10-RC2</version>
 	</parent>
   	
   	<artifactId>nimbus-test</artifactId>
