--- a/nimbus-test/src/test/resources/application-test.yml
+++ b/nimbus-test/src/test/resources/application-test.yml
@@ -44,7 +44,7 @@ domain:
   model:
     domainSet:
       remote: 
-        remote_repo,sample_remote
+        remote_repo, remote_repo2, vr_remote_repo2 
     basePackages:
       - com.antheminc.oss.nimbus.entity
       - com.antheminc.oss.nimbus.**.core
@@ -136,6 +136,8 @@ remote:
   repository:
     serviceUrl:
       remote_repo: http://remote-repo
+      remote_repo2: http://remote_repo
+      vr_remote_repo2: http://remote_repo
       remote_repo_withcontext: http://remote-repo/contextpath
       cliententity: http://cliententity
       client: http://client
