Moves command uri updates from http client interceptor to command class

--- a/nimbus-test/src/test/resources/application-test.yml
+++ b/nimbus-test/src/test/resources/application-test.yml
@@ -135,9 +135,9 @@ ext:
 remote:
   repository:
     serviceUrl:
-      remote_repo: http://remote-repo
-      remote_repo2: http://remote_repo
-      vr_remote_repo2: http://remote_repo
+      remote_repo: http://remote-repo/contextpath
+      remote_repo2: http://remote_repo/contextpath
+      vr_remote_repo2: http://remote_repo/contextpath
       remote_repo_withcontext: http://remote-repo/contextpath
       cliententity: http://cliententity
       client: http://client
