--- a/nimbus-ui/nimbusui/package.json
+++ b/nimbus-ui/nimbusui/package.json
@@ -40,7 +40,8 @@
     "nimbus-sass-module": "^1.18.22",
     "popper.js": "^1.12.9",
     "primeicons": "^1.0.0-beta.10",
-    "primeng": "6.1.5",
+    "primeng": "^6.1.7",
+    "quill": "^1.3.6",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0",
     "rxjs-compat": "^6.2.2",
