--- a/pom.xml
+++ b/pom.xml
@@ -700,7 +700,7 @@
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
                     <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>${nexus-staging-maven-plugin}</version>
+                    <version>${nexus-staging-maven-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>default-deploy</id>
