Adds the OSSRH snapshot and release repositories

--- a/pom.xml
+++ b/pom.xml
@@ -99,8 +99,16 @@
         </repository>
     	<repository>
             <id>alfresco.com</id>
-	    <url>https://maven.alfresco.com/nexus/content/repositories/activiti/</url>
-	</repository>
+	        <url>https://maven.alfresco.com/nexus/content/repositories/activiti/</url>
+	    </repository>
+        <repository>
+            <id>ossrh-staging</id>
+            <url>https://oss.sonatype.org/content/repositories/staging</url>
+        </repository>
+        <repository>
+            <id>ossrh-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
     </repositories>
 
     <developers>
