--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.antheminc.oss</groupId>
 	<artifactId>nimbus-parent</artifactId>
-	<version>1.3.0.BUILD-SNAPSHOT</version>
+	<version>${revision}</version>
 	<name>nimbus-parent</name>
 	<packaging>pom</packaging>
 	<description>Anthem open source nimbus project </description>
@@ -73,7 +73,7 @@
         <jacoco.maven.plugin.version>0.8.2</jacoco.maven.plugin.version>
         <!-- nimbus-core -->
         <parentDir>..</parentDir>
-        <nimbus.version>1.3.0.BUILD-SNAPSHOT</nimbus.version>
+        <nimbus.version>${project.version}</nimbus.version>
         <nimbus.core.version>${nimbus.version}</nimbus.core.version>
         <nimbus.ui.version>${nimbus.version}</nimbus.ui.version>
         <nimbus.dsl.version>${nimbus.core.version}</nimbus.dsl.version> <!-- DSL matches core's version -->
@@ -846,6 +846,31 @@
 			        </execution>
 			    </executions>
 			</plugin> -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <configuration>
+                    <updatePomFile>true</updatePomFile>
+                    <flattenMode>ossrh</flattenMode>
+                </configuration>
+                <executions>
+                    <execution>
+                    <id>flatten</id>
+                    <phase>process-resources</phase>
+                    <goals>
+                        <goal>flatten</goal>
+                    </goals>
+                    </execution>
+                    <execution>
+                    <id>flatten.clean</id>
+                    <phase>clean</phase>
+                    <goals>
+                        <goal>clean</goal>
+                    </goals>
+                    </execution>
+                </executions>
+                </plugin>
         </plugins>
     </build>
 
