--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,8 @@
         <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
         <sonar.maven.plugin.version>3.5.0.1254</sonar.maven.plugin.version>
         <jacoco.maven.plugin.version>0.8.2</jacoco.maven.plugin.version>
+        <apache.poi.version>3.16</apache.poi.version>
+        <univocity.version>2.8.1</univocity.version>
         <!-- nimbus-core -->
         <parentDir>..</parentDir>
         <nimbus.version>1.3.0.BUILD-SNAPSHOT</nimbus.version>
@@ -480,6 +482,25 @@
 		<dependency>
 			<groupId>org.owasp.esapi</groupId>
     		<artifactId>esapi</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+		<dependency>
+		<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>${apache.poi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${apache.poi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.univocity</groupId>
+			<artifactId>univocity-parsers</artifactId>
+			<version>${univocity.version}</version>
 		</dependency>	
 	</dependencies>
 
