--- a/nimbus-ui/nimbusui/package.json
+++ b/nimbus-ui/nimbusui/package.json
@@ -14,17 +14,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/platform-server": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@angular/upgrade": "^6.1.0",
+    "@angular/animations": "7.2.11",
+    "@angular/cdk": "^7.3.6",
+    "@angular/common": "7.2.11",
+    "@angular/compiler": "7.2.11",
+    "@angular/core": "7.2.11",
+    "@angular/forms": "7.2.11",
+    "@angular/http": "7.2.11",
+    "@angular/platform-browser": "7.2.11",
+    "@angular/platform-browser-dynamic": "7.2.11",
+    "@angular/platform-server": "7.2.11",
+    "@angular/router": "7.2.11",
+    "@angular/upgrade": "7.2.11",
     "@ng-bootstrap/ng-bootstrap": "^3.2.0 ",
     "angular-svg-icon": "^6.0.0",
     "angular-webstorage-service": "^1.0.2",
@@ -40,7 +41,7 @@
     "nimbus-sass-module": "^1.18.39",
     "popper.js": "^1.12.9",
     "primeicons": "^1.0.0-beta.10",
-    "primeng": "^6.1.7",
+    "primeng": "7.1.0",
     "quill": "^1.3.6",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0",
@@ -52,8 +53,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular/cli": "~6.2.3",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
+    "@angular/compiler-cli": "7.2.11",
+    "@angular/language-service": "7.2.11",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -72,6 +73,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "typescript": "~3.1.1"
   }
 }
