--- a/pom.xml
+++ b/pom.xml
@@ -484,6 +484,10 @@
             <artifactId>jackson-antpathfilter</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-activemq</artifactId>
+    	</dependency>
 		<dependency>
 			<groupId>org.owasp.esapi</groupId>
     		<artifactId>esapi</artifactId>
