--- a/nimbus-core/src/main/resources/application.properties
+++ b/nimbus-core/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 logging.level.org.apache.tomcat.util.scan=ERROR
+nimbus.formatted-version = 1.3.1.BUILD-SNAPSHOT
