--- a/nimbus-test/src/test/resources/application-test-multi-db.yml
+++ b/nimbus-test/src/test/resources/application-test-multi-db.yml
@@ -29,6 +29,12 @@ nimbus:
       # host: localhost
       # port: 12345
       database: secondary
+      
+  multitenancy: 
+    tenants:
+      1: 
+        description: DEFAULT
+        prefix: /hooli/thebox
 
 ruleBasedRequestHandler:
                      - defaultRuleBasedRequestHandler
