--- a/nimbus-ui/nimbusui/package.json
+++ b/nimbus-ui/nimbusui/package.json
@@ -77,6 +77,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
+    "ts-expression-evaluator": "^1.3.13",
     "typescript": "~3.1.1"
   }
 }
