--- a/pom.xml
+++ b/pom.xml
@@ -405,6 +405,10 @@
              <artifactId>activiti-spring-boot-starter</artifactId>
              <version>${activiti-spring-boot.version}</version>
          </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>            
     	<dependency>
     			<groupId>org.apache.commons</groupId>
     			<artifactId>commons-dbcp2</artifactId>
@@ -475,6 +479,10 @@
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-mongodb</artifactId>
         </dependency>
+        <dependency>
+		    <groupId>com.querydsl</groupId>
+		    <artifactId>querydsl-jpa</artifactId>
+		</dependency>   
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
