--- a/nimbus-ui/nimbusui/package.json
+++ b/nimbus-ui/nimbusui/package.json
@@ -60,6 +60,7 @@
     "@angular/language-service": "7.2.11",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/moment": "^2.13.0",
     "@types/node": "~6.0.60",
     "angular-in-memory-web-api": "^0.5.1",
     "codelyzer": "^4.4.2",
@@ -75,9 +76,9 @@
     "ng-bullet": "^1.0.3",
     "prettier": "1.17.1",
     "protractor": "~5.4.0",
+    "ts-expression-evaluator": "^1.3.13",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "ts-expression-evaluator": "^1.3.13",
     "typescript": "~3.1.1"
   }
 }
