--- a/pom.xml
+++ b/pom.xml
@@ -1015,6 +1015,16 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>${maven-javadoc-plugin.version}</version>
+                        <configuration>
+							<!-- Silence error javax.interceptor.InterceptorBinding not found -->
+							<additionalDependencies>
+							    <additionalDependency>
+							        <groupId>javax.interceptor</groupId>
+							        <artifactId>javax.interceptor-api</artifactId>
+							        <version>1.2</version>
+							    </additionalDependency>
+							</additionalDependencies>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
