--- a/nimbus-test/src/test/resources/application-rdbms-test.yml
+++ b/nimbus-test/src/test/resources/application-rdbms-test.yml
@@ -30,6 +30,7 @@ nimbus:
       basePackages:
         - com.antheminc.oss.nimbus.entity
         - com.antheminc.oss.nimbus.test.scenarios.repo.rdbms.core
+        - com.antheminc.oss.nimbus.test.scenarios.repo.rdbms.view
         - com.antheminc.oss.nimbus.domain.bpm
         - com.antheminc.oss.nimbus.domain.rules
       persistence:
