--- a/nimbus-core/pom.xml
+++ b/nimbus-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.antheminc.oss</groupId>
 		<artifactId>nimbus-parent</artifactId>
-		<version>1.3.2.BUILD-SNAPSHOT</version>
+		<version>1.3.2.M2</version>
 	</parent>
 	
 	<artifactId>nimbus-core</artifactId>
