--- a/nimbus-ui/nimbusui/package.json
+++ b/nimbus-ui/nimbusui/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "mavenbuild": "ng build --prod",
+    "mavenbuild": "ng build",
     "coverage": "ng test --watch=false --code-coverage",
     "prettier:base": "prettier --parser typescript --single-quote",
     "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
@@ -44,7 +44,7 @@
     "nimbus-sass-module": "^1.18.42",
     "popper.js": "^1.12.9",
     "primeicons": "^1.0.0-beta.10",
-    "primeng": "7.1.3",
+    "primeng": "7.1.2",
     "quill": "^1.3.6",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0",
