--- a/nimbus-ui/nimbusui/package.json
+++ b/nimbus-ui/nimbusui/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "mavenbuild": "ng build --prod",
+    "mavenbuild": "ng build",
     "coverage": "ng test --watch=false --code-coverage",
     "prettier:base": "prettier --parser typescript --single-quote",
     "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
