--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 	
-	    <spring.boot.version>2.0.5.RELEASE</spring.boot.version>
-    	<spring.cloud.version>Finchley.RELEASE</spring.cloud.version>
+	    <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
+    	<spring.cloud.version>Hoxton.SR1</spring.cloud.version>
 		<spring.boot.maven.version>2.0.5.RELEASE</spring.boot.maven.version>
 	
 		<sonar.projectName>Nimbus Framework</sonar.projectName>
@@ -370,10 +370,12 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-web</artifactId>
     	</dependency>
-       	<dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-        </dependency>
+        <dependency>
+        <groupId>org.codehaus.groovy</groupId>
+        <artifactId>groovy-all</artifactId>
+        <version>2.4.15</version>
+      </dependency>
+
         <dependency>
             <groupId>org.eclipse.jdt.core.compiler</groupId>
             <artifactId>ecj</artifactId>
