--- a/nimbus-test/src/test/resources/application-test.yml
+++ b/nimbus-test/src/test/resources/application-test.yml
@@ -70,7 +70,7 @@ domain:
     markerInterfaces:
    
 logging:
-  file: C:\AG34346\Fork_Branch\git_training\nimbus-core\nimbus-test/Documents/nimbuslogs/test-nimbus.log
+  file: ${HOME}/nimbuslogs/test-nimbus.log
 user:
   permissionToActions:
     ACCESS:
