--- a/nimbus-extn-activiti/pom.xml
+++ b/nimbus-extn-activiti/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.antheminc.oss</groupId>
 		<artifactId>nimbus-parent</artifactId>
-		<version>1.3.1.M13</version>
+		<version>1.3.1.M15.BUILD-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>nimbus-extn-activiti</artifactId>
