--- a/nimbus-entity-dsl/pom.xml
+++ b/nimbus-entity-dsl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.antheminc.oss</groupId>
 		<artifactId>nimbus-parent</artifactId>
-		<version>1.3.1.M15.BUILD-SNAPSHOT</version>
+		<version>1.3.1.M15</version>
 	</parent>
 
 	<artifactId>nimbus-entity-dsl</artifactId> 
